tests/examples/failing/InfixOperator.hs.bad
{-# LANGUAGE BangPatterns, CPP, OverloadedStrings #-}

















json_ :: Parser Value -> Parser Value -> Parser Value
json_ obj ary = do
  w <- skipSpace *> A.satisfy (\w -> w == 123 || w == 91)
  if w == 123
    then obj
    else ary
{-# INLINE json_ #-}

